day4/overlays/prod/prod.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Namespace","metadata":{"annotations":{},"labels":{"env":"prod"},"name":"prod-ns"}}
    labels:
      env: prod
    name: prod-ns
- apiVersion: v1
  data:
    INSTANCE_NAME: prod-version
  kind: ConfigMap
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","data":{"INSTANCE_NAME":"prod-version"},"kind":"ConfigMap","metadata":{"annotations":{},"labels":{"env":"prod"},"name":"prod-dov-cm-fc4k7g4g78","namespace":"prod-ns"}}
    labels:
      env: prod
    name: prod-dov-cm-fc4k7g4g78
    namespace: prod-ns
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"dov","env":"prod","name":"dov-svc"},"name":"prod-dov-svc","namespace":"prod-ns"},"spec":{"ports":[{"port":3000,"targetPort":3000}],"selector":{"app":"dov","env":"prod","name":"dov-po"},"type":"ClusterIP"}}
    labels:
      app: dov
      env: prod
      name: dov-svc
    name: prod-dov-svc
    namespace: prod-ns
  spec:
    ports:
    - port: 3000
      targetPort: 3000
    selector:
      app: dov
      env: prod
      name: dov-po
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"dov","env":"prod","name":"dov-deploy"},"name":"prod-dov-deploy","namespace":"prod-ns"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"dov","env":"prod","name":"dov-po"}},"template":{"metadata":{"labels":{"app":"dov","env":"prod","name":"dov-po"}},"spec":{"containers":[{"env":[{"name":"INSTANCE_NAME","valueFrom":{"fieldRef":{"fieldPath":"metadata.name"}}},{"name":"INSTANCE_HASH","valueFrom":{ [...]
    labels:
      app: dov
      env: prod
      name: dov-deploy
    name: prod-dov-deploy
    namespace: prod-ns
  spec:
    replicas: 3
    selector:
      matchLabels:
        app: dov
        env: prod
        name: dov-po
    template:
      metadata:
        labels:
          app: dov
          env: prod
          name: dov-po
      spec:
        containers:
        - env:
          - name: INSTANCE_NAME
            valueFrom:
              fieldRef:
                fieldPath: metadata.name
          - name: INSTANCE_HASH
            valueFrom:
              fieldRef:
                fieldPath: metadata.labels['pod-template-hash']
          image: chukmunnlee/dov-bear:v5-prod
          name: dov-container
          ports:
          - containerPort: 3000
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 512Mi
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"labels":{"app":"dov","env":"prod","name":"dov-ing"},"name":"prod-dov-ing","namespace":"prod-ns"},"spec":{"ingressClassName":"nginx","rules":[{"host":"dov.104.248.98.107.nip.io","http":{"paths":[{"backend":{"service":{"name":"prod-dov-svc","port":{"number":3000}}},"path":"/","pathType":"Prefix"}]}}]}}
    labels:
      app: dov
      env: prod
      name: dov-ing
    name: prod-dov-ing
    namespace: prod-ns
  spec:
    ingressClassName: nginx
    rules:
    - host: dov.104.248.98.107.nip.io
      http:
        paths:
        - backend:
            service:
              name: prod-dov-svc
              port:
                number: 3000
          path: /
          pathType: Prefix
kind: List
metadata: {}
